45: building small docker images with jlink (#46)