@@ -8,6 +8,7 @@ plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
     id "io.vertx.vertx-plugin" version "1.3.0"
+    id 'org.graalvm.buildtools.native' version '0.9.17'
 }
 
 repositories {
@@ -33,6 +34,30 @@ dependencies {
 
 application {
     mainClass = 'io.vertx.core.Launcher'
+}
+
+graalvmNative {
+    binaries {
+        main {
+            javaLauncher = javaToolchains.launcherFor {
+                toolchainDetection = false
+
+                buildArgs.add('--allow-incomplete-classpath')
+
+                buildArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
+                buildArgs.add('--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED')
+                buildArgs.add('--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED')
+
+                buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
+                buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
+                buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
+                buildArgs.add('--initialize-at-run-time=io.netty')
+
+                // languageVersion = JavaLanguageVersion.of(17)
+                // vendor = JvmVendorSpec.matching("GraalVM Community")
+            }
+        }
+    }
 }
 
 vertx {
